# trading-bot

./: .codexconfig.toml  .env.example  .gitignore  AGENTS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_openai.py
.github/: PULL_REQUEST_TEMPLATE.md
.services/: TradingMvpBackend.xml  TradingMvpFrontend.xml  TradingMvpScheduler.xml  TradingMvpWorker.xml
alembic/: env.py
backend/: AGENTS.md
docs/: README.md  agent-design.md  api.md  applied-ai-binance-integration-2026-04-08.md  applied-ops-ui-service-update-2026-04-08.md  architecture.md  audit-legacy-trigger-policy.md  backlog-ui.md  bls-wrapper-ops-guide.md  codex-drafts-and-auto-resume.md  execution-flow.md  legacy-audit-trigger-migration-decision.md  legacy-audit-trigger-migration-review-checklist.md  live-only-multisymbol-update-2026-04-08.md  live-trading-phase1-update-2026-04-08.md  operator-bridge-template.md  release-2m-incident-response.md  release-30m-checklist.md  release-5m-final-check.md  release-operator-runbook.md  risk-policy.md  strategy-engine-rule-surface.md  user-guide-ko.md
frontend/: AGENTS.md  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.tsbuildinfo
infra/: backend.Dockerfile  bls-wrapper.example.toml  frontend.Dockerfile  worker.Dockerfile
prompts/: first-task.md
scripts/: backfill_finished_order_status.py  check_operator_bridge_docs.py  disable_scheduler_service.ps1  evaluate_event_gate.py  export_sales_pdf.ps1  export_sales_pdf.py  install_windows_services.ps1  lint.ps1  migrate.ps1  run_backend.ps1  run_bls_wrapper.ps1  (+11 more)
(+204 files in other folders)
